# NUSense

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  memory-app.x  memory-bootloader.x  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
src/apps/: acm_echo.rs  crc_demo.rs  crc_test.rs  echo_app.rs  mod.rs
src/drivers/: mod.rs
src/drivers/imu/: driver.rs  mod.rs
src/peripherals/: acm.rs  crc.rs  mod.rs  spi.rs  system.rs  usb_device.rs  usb_system.rs
