[package]
name = "nusense-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "NUSense embedded platform firmware for robotics applications"
repository = "https://github.com/NUbots/NUSense"
authors = ["NUbots"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["tick-hz-1_000_000"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = ["stm32h753vi", "time-driver-tim2", "exti"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git" }

static_cell = { version = "2.1.1" }

panic-halt = { version = "1.0.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.0.0", optional = true }

[package.metadata.cargo-machete]
ignored = ["cortex-m", "cortex-m-rt"]

[[bin]]
name = "nusense-rs"
path = "src/main.rs"
harness = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
default = ["debug", "debug-acm", "debug-crc"]
debug = ["defmt-embassy", "defmt-rtt", "panic-probe"]
defmt-embassy = [
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
    "embassy-usb/defmt",
]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
debug-acm = []
debug-crc = []
